[package]
authors = ["jD91mZM2 <me@krake.one>"]
name = "server"
version = "0.5.4"

[dependencies]
bcrypt = "0.1.5"
chrono = "0.4.0"
futures = "0.1.14"
openssl = "0.9.17"
rusqlite = "0.13.0"
serde = "1.0.14"
serde_derive = "1.0.25"
serde_json = "1.0.8"
tokio-core = "0.1.9"
tokio-io = "0.1.3"
tokio-openssl = "0.1.3"

[dependencies.common]
path = "common"
