[package]
authors = ["jD91mZM2 <me@krake.one>"]
name = "server"
version = "0.5.6"
[dependencies]
bcrypt = "0.1.5"
chrono = "0.4.0"
futures = "0.1.17"
openssl = "0.10.2"
rusqlite = "0.13.0"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
tokio-core = "0.1.12"
tokio-io = "0.1.4"
tokio-openssl = "0.2.0"

[dependencies.common]
path = "common"
